--- a/ProjectHistorico/WebContent/web.xml
+++ b/ProjectHistorico/WebContent/web.xml
@@ -20,7 +20,7 @@
                 </servlet-class>
 		<init-param>
 		     <param-name>com.sun.jersey.config.property.packages</param-name>
-		     <param-value>com.javacodegeeks.enterprise.rest.jersey</param-value>
+		     <param-value>rest.services</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
