--- a/ProjectHistorico/pom.xml
+++ b/ProjectHistorico/pom.xml
@@ -28,7 +28,46 @@
 		<version>1.9</version>
 	</dependency>
 
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.3.1</version>
+	</dependency>
+	
+	
+	<!-- <dependency>
+        <groupId>org.glassfish.jersey.media</groupId>
+        <artifactId>jersey-media-json-jackson</artifactId>
+        <version>2.13</version>
+        <type>jar</type>
+    </dependency> -->
+    
+     <dependency>
+        <groupId>com.sun.jersey</groupId>
+        <artifactId>jersey-json</artifactId>
+        <version>1.9</version>      
+     </dependency>
+
+	<!-- <dependency>
+		<groupId>org.glassfish.jersey.media</groupId>
+		<artifactId>jersey-media-json-jettison</artifactId>
+		<version>2.0</version>
+    </dependency> -->
+    
 </dependencies>  
+
+<build>
+	<plugins>
+		<plugin>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>2.0.2</version>
+			<configuration>
+				<source>1.7</source>
+				<target>1.7</target>
+			</configuration>
+		</plugin>
+	</plugins>
+</build>
   
 		
   
