--- a/ProjectHistorico/pom.xml
+++ b/ProjectHistorico/pom.xml
@@ -15,6 +15,7 @@
   </properties>
 
   <dependencies>
+  
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
@@ -40,19 +41,25 @@
         <artifactId>jersey-media-json-jackson</artifactId>
         <version>2.13</version>
         <type>jar</type>
-    </dependency> -->
-    
+        <exclusions>
+        	<exclusion>
+        		<artifactId>javax.ws.rs-api</artifactId>
+        		<groupId>javax.ws.rs</groupId>
+        	</exclusion>
+        </exclusions>
+	</dependency>
+     -->
      <dependency>
         <groupId>com.sun.jersey</groupId>
         <artifactId>jersey-json</artifactId>
         <version>1.9</version>      
      </dependency>
 
-	<!-- <dependency>
+	<!--  <dependency>
 		<groupId>org.glassfish.jersey.media</groupId>
 		<artifactId>jersey-media-json-jettison</artifactId>
 		<version>2.0</version>
-    </dependency> -->
+    </dependency>  -->
     
 </dependencies>  
 
